# antenna_toolbox

./: .gitignore  CODEOWNERS  LICENSE.txt  README.md  __init__.py  build.sh  constants.py  core.py  electromagnetics.py  grids.py  materials.py  math_funcs.py  parse.py  plot.py  req.txt  setup.cfg  setup.py  unittests.py
antenna_toolbox/: __init__.py  materials.py  parse.py  plot.py
antenna_toolbox/antenna_toolbox.egg-info/: PKG-INFO  SOURCES.txt
antenna_toolbox/antennas/: __init__.py  apertures.py  lens.py
antennas/: __init__.py  apertures.py  circular_patch.py
docs/: class_diagram_link.txt
docs/examples/: example.ipynb  example_arg_chamber_data.ipynb  example_circular_realized_gain.csv  example_constants.ipynb  example_magic_functions.ipynb  example_plot.ipynb
