[metadata]
name = antenna_toolbox
version = 0.0.1
author = Theodore Prince & Jake Sahli
description = A package for manipulation of antenna patterns
long_description = file: README.md, LICENSE.txt
long_description_content_type = text/markdown
url = https://github.com/TheoPrinceColorado/antenna_toolbox
project_urls =
    Bug Tracker = https://github.com/TheoPrinceColorado/antenna_toolbox
    repository =https://github.com/TheoPrinceColorado/antenna_toolbox
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = antenna_toolbox
packages = find:
python_requires = >=3.6

[options.packages.find]
where = antenna_toolbox